--- a/start.html
+++ b/start.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
-    <h1>My Start file is not index.html file</h1>
+    <h1>My Start file is not index.html file/<h1>
+    <h3> New destination</h3>
+    <img src="Babes.jfif" alt="">
     
 </body>
 </html>
